# php-grpc

./: .gitignore  CMakeLists.txt  config.m4  config.w32  php_grpc.c  php_grpc.h
.github/: build.ps1
src/: batch.c  batch.h  call.c  call.h  channel.c  completion_queue.c  completion_queue.h  server.c  version.h
